Fix for bug 106383: regression: new composer doc behaves as if empty

mozilla/editor/libeditor/html/nsHTMLDataTransfer.cpp
  mozilla/editor/libeditor/html/nsHTMLEditRules.cpp
  mozilla/editor/libeditor/html/nsHTMLEditRules.h
  mozilla/editor/libeditor/html/nsHTMLEditor.h
  mozilla/editor/libeditor/text/nsTextEditRules.h

    - Added nsHTMLEditRules::WillLoadHTML() which removes any mBogusNode.
    - Modified nsHTMLEditor::LoadHTML() to call Will/DidDoAction().
    - Changed all references of kOpHTMLLoad to kOpLoadHTML to match
      function name, and added kLoadHTML.

r=jfrancis.netscape.com  sr=sfraser.netscape.com  a=asa@mozilla.org